--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 <body>
 
 <form>
+    Nome  <input type="text" id="n" required> <br>
    Valor aplicado mensalmente <input type="number" required id="v"> <br>
 Taxa de jutos <input type="number" required id="j"> <br>
     Numero de parcelas <input type="number" id="p" required> <br>
+
 <button  id="enviar">Calcular</button>
 
 </form>
